updated cost range

--- a/elhub_wrangling.ipynb
+++ b/elhub_wrangling.ipynb
@@ -120,120 +120,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>dato</th>\n",
-       "      <th>volum</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-01-01</td>\n",
-       "      <td>43328</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-01-02</td>\n",
-       "      <td>42475</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2020-01-03</td>\n",
-       "      <td>42042</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020-01-04</td>\n",
-       "      <td>38595</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020-01-05</td>\n",
-       "      <td>49480</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1242</th>\n",
-       "      <td>2023-05-27</td>\n",
-       "      <td>60343</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1243</th>\n",
-       "      <td>2023-05-28</td>\n",
-       "      <td>57871</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1244</th>\n",
-       "      <td>2023-05-29</td>\n",
-       "      <td>61973</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1245</th>\n",
-       "      <td>2023-05-30</td>\n",
-       "      <td>64419</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1246</th>\n",
-       "      <td>2023-05-31</td>\n",
-       "      <td>60567</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1247 rows × 2 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           dato  volum\n",
-       "0    2020-01-01  43328\n",
-       "1    2020-01-02  42475\n",
-       "2    2020-01-03  42042\n",
-       "3    2020-01-04  38595\n",
-       "4    2020-01-05  49480\n",
-       "...         ...    ...\n",
-       "1242 2023-05-27  60343\n",
-       "1243 2023-05-28  57871\n",
-       "1244 2023-05-29  61973\n",
-       "1245 2023-05-30  64419\n",
-       "1246 2023-05-31  60567\n",
-       "\n",
-       "[1247 rows x 2 columns]"
+       "'30. October 2020'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_produksjon_filter.groupby(['dato'])[['volum']].max().reset_index().ord('volum')"
+    "df_produksjon_filter.groupby(['dato'])[['volum']].sum().reset_index().sort_values(by='volum', ascending=False).head(1).iloc[0]['dato'].strftime('%d. %B %Y')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'04. February 2021'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_group_filter.groupby(['dato'])[['volum']].sum().reset_index().sort_values(by='volum', ascending=False).head(1).iloc[0]['dato'].strftime('%d. %B %Y') #group df_group_filter by dato and sum volum\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "63078"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
